--- a/src/kmeans_clustering_aggregated_datasets.Rmd
+++ b/src/kmeans_clustering_aggregated_datasets.Rmd
@@ -21,29 +21,83 @@ wssplot <- function(data, nc=15, seed=1234){
 ```
 
 ```{r}
-gc <- ag[["VisitFrequency"]][["get"]]
-rownames(gc) <- 1:nrow(gc)
+g <- ag[["VisitFrequency"]][["get"]]
+rownames(g) <- 1:nrow(g)
 
-gc0 <- gc[,which(sapply(names(gc),function(x) is.numeric(gc[,x])))] #filter on numeric variables
-gc0 <- gc0[,which(!names(gc0) %in% "nb_users_returning")] #useless variable
-gc0 <- scale(gc0)
+g0 <- g[,which(sapply(names(g),function(x) is.numeric(g[,x])))] #filter on numeric variables
+g0 <- g0[,which(!names(g0) %in% "nb_users_returning")] #useless variable
+g0 <- scale(g0)
 
 ```
 
 ```{r}
 #clustering K-Means
-wssplot(gc0, nc=6)
+wssplot(g0, nc=6)
 ```
 
 ```{r}
-k <- kmeans(gc0,2) #k=2
-# k <- kmeans(gc0,3) #k=3
+k <- kmeans(g0,2) #k=2
+# k <- kmeans(g0,3) #k=3
 ```
 
 ```{r}
-library(cluster)
-clusplot(gc0, k$cluster, main='2D representation of the Cluster solution',
+require(cluster)
+clusplot(g0, k$cluster, main='2D representation of the Cluster solution',
          color=TRUE, shade=TRUE,
          labels=2, lines=0)
 ```
 
+```{r}
+g <- ag[["VisitTime"]][["getByDayOfWeek"]]
+g <- na.omit(g)
+g <- g[-c(8,9,89),] #outliers
+rownames(g) <- 1:nrow(g)
+
+g0 <- g[,which(sapply(names(g),function(x) is.numeric(g[,x])))] #filter on numeric variables
+g0 <- g0[,which(!names(g0) %in% "nb_users")] #useless variable
+g0 <- scale(g0)
+
+```
+
+```{r}
+#clustering K-Means
+wssplot(g0, nc=6)
+```
+
+```{r}
+k <- kmeans(g0,2) #k=2
+# k <- kmeans(g0,3) #k=3
+```
+
+```{r}
+clusplot(g0, k$cluster, main='2D representation of the Cluster solution',
+         color=TRUE, shade=TRUE,
+         labels=2, lines=0)
+```
+
+```{r}
+g <- ag[["VisitsSummary"]][["get"]]
+# g <- na.omit(g)
+g <- g[-c(8,9,89,44),] #outliers
+rownames(g) <- 1:nrow(g)
+
+g0 <- g[,which(sapply(names(g),function(x) is.numeric(g[,x])))] #filter on numeric variables
+g0 <- g0[,which(!names(g0) %in% "nb_users")] #useless variable
+g0 <- scale(g0)
+
+```
+
+```{r}
+#clustering K-Means
+wssplot(g0, nc=6)
+```
+
+```{r}
+k <- kmeans(g0,2)
+```
+
+```{r}
+clusplot(g0, k$cluster, main='2D representation of the Cluster solution',
+         color=TRUE, shade=TRUE,
+         labels=2, lines=0)
+```
