--- a/src/identify_unknown_area_visits.Rmd
+++ b/src/identify_unknown_area_visits.Rmd
@@ -1,36 +1,46 @@
 ---
-title: "Track unknown country"
-output: html_notebook
+title: "Track unknown country through @IP"
+output:
+  html_notebook:
+    code_folding: hide
 editor_options: 
   chunk_output_type: inline
 ---
 
 ```{r}
-if (is.null(v))
+if (!exists("v"))
   load("./data/os-visits+actions_2017-10-02_2018-04-14.RData")
 ```
 
 ```{r}
 
-ip <- unique(v[v$country=="Unknown",]$visitIp)
-ip <- paste0("http://api.db-ip.com/v2/free/",ip)
+f <- "./data/unknown_countries_ip.rds"
 
-require(jsonlite)
-doc <- vector("list", length(ip))
-invisible(lapply(1:length(ip),function(x) doc[[x]] <<- fromJSON(txt=ip[x])))
-c.unk <- lapply(doc,function(x) do.call("rbind",x))
-c.unk <- as.data.frame(t(as.data.frame(c.unk,stringsAsFactors=F)),stringsAsFactors=F)
-rownames(c.unk) <- NULL
-saveRDS(c.unk,"./data/unknown_countries_ip.rds")
+ip <- unique(v[v$country=="Unknown",]$visitIp)
+
+go <- readline(paste0("Get @IP for ",length(ip)," entries (only 1000 allowed per day)? (y|n): "))
+if (go %in% c("y","Y")) {
+  ip <- paste0("http://api.db-ip.com/v2/free/",ip)
+  require(jsonlite)
+  doc <- vector("list", length(ip))
+  invisible(lapply(1:length(ip),function(x) doc[[x]] <<- fromJSON(txt=ip[x])))
+  c.unk <- lapply(doc,function(x) do.call("rbind",x))
+  c.unk <- as.data.frame(t(as.data.frame(c.unk,stringsAsFactors=F)),stringsAsFactors=F)
+  rownames(c.unk) <- NULL
+  saveRDS(c.unk,f)
+  cat(paste0(nrow(c.unk)," @IP queried and saved in ",f,"\n"))
+  rm(f,go,ip,doc)
+}
 
 ```
 
 ```{r}
 
-cat("* Frequency of countries among 'unknown' category:\n")
+cat("* Frequency of 'unknown' countries by unique @IP:\n")
 sort(table(c.unk$countryName),decreasing=T)
 
 cat("\n* Distribution of 'unknown' countries on visits:\n")
+suppressMessages(require(dplyr))
 x <- left_join(v[v$country=="Unknown",c("visitIp","idVisit")],c.unk[,c("ipAddress","countryName")],by=c("visitIp"="ipAddress"))
 sort(table(x$countryName),decreasing=T)
 rm(x)
